--- a/src/index.scss
+++ b/src/index.scss
@@ -150,8 +150,6 @@ code {
   background-color: orange;
 }
 
-
-
 .setup-page {
   background: url("./assets/vector.svg") no-repeat;
   min-height: 100vh;
@@ -204,27 +202,27 @@ code {
             font-size: 1.2rem;
           }
         }
-        .left{
-            animation: left-animation 0.5s ease-in;
+        .left {
+          animation: left-animation 0.5s ease-in;
         }
-        .middle{
-            animation: middle-animation 0.75s ease-in;
+        .middle {
+          animation: middle-animation 0.75s ease-in;
         }
-        .right{
-            animation: right-animation 1s ease-in;
+        .right {
+          animation: right-animation 1s ease-in;
         }
       }
     }
-    .ready-container{
+    .ready-container {
       text-align: center;
       margin-top: 50px;
-      .ready{
+      .ready {
         @include scorebtn();
         color: black;
         transition: color 170ms ease-in-out;
       }
-      .ready:hover{
-        color:#f16b0e
+      .ready:hover {
+        color: #f16b0e;
       }
     }
   }
@@ -242,28 +240,27 @@ code {
   }
 }
 
-
 @keyframes left-animation {
-  0%{
+  0% {
     transform: translateX(200%);
   }
-  100%{
+  100% {
     transform: translateX(0%);
   }
 }
 @keyframes middle-animation {
-  0%{
+  0% {
     transform: translateX(200%);
   }
-  100%{
+  100% {
     transform: translateX(0%);
   }
 }
 @keyframes right-animation {
-  0%{
+  0% {
     transform: translateX(100%);
   }
-  100%{
+  100% {
     transform: translateX(0%);
   }
 }
@@ -278,13 +275,47 @@ code {
   .nav-text {
     margin-right: 20px;
   }
-  .pic-container{
+  .pic-container {
     display: none;
   }
-  .name{
+  .name {
     font-size: 0.7rem;
   }
-  .left,.middle,.right{
+  .left,
+  .middle,
+  .right {
     animation: none !important;
+  }
+}
+
+.game-container {
+  
+  min-width: 100%;
+  max-height: 100vh;
+  .timer-container {
+    text-align: center;
+    h2 {
+      font-size: 8vw;
+    }
+  }
+ .dropdown{
+   display: none;
+ }
+ .active{
+   position: absolute;
+   background-color: black;
+   display: flex;
+   flex-direction: column;
+   
+
+ }
+ .active:hover:focus{
+    cursor: pointer;
+ }
+  #game-pic {
+    max-width: 100%;
+    min-height: 100%;
+    cursor: url('./assets/cursor.png'), auto;
+    
   }
 }
