--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+
+html {
+  
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,8 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
 }
 
 @mixin scorebtn() {
@@ -22,10 +25,10 @@ body {
 }
 
 #root {
-  height: 100%;
+  min-height: 100vh;
 }
 .App {
-  height: 100%;
+  min-height: 100%
 }
 
 .scores {
@@ -289,33 +292,53 @@ code {
 }
 
 .game-container {
-  
   min-width: 100%;
-  max-height: 100vh;
+  min-height: 100vh;
   .timer-container {
     text-align: center;
     h2 {
       font-size: 8vw;
     }
   }
- .dropdown{
-   display: none;
- }
- .active{
-   position: absolute;
-   background-color: black;
-   display: flex;
-   flex-direction: column;
-   
 
+ .img-container{
+   position: relative;
+ }
+  #game-pic {
+  padding: 0;
+  max-width: 100%;
+  cursor: url('./assets/cursor.png'), auto;
+  }  
+  
+  .active{
+   position: absolute;
+   width: 75px;
+   background-color: white;
+   border-radius: 9px;
+   text-align: center;
+   opacity: 85%;
+   .modal{
+     margin: 0;
+     display: flex;
+     padding: 7px 7px 7px 7px;
+     flex-direction: column;
+     justify-content: center;
+     button{
+      margin-top: 5px;
+      background-color: #f16b0e;
+      border-radius: 5px;
+      width: 100%;
+     }
+   }
+   
+  
  }
  .active:hover:focus{
     cursor: pointer;
  }
-  #game-pic {
-    max-width: 100%;
-    min-height: 100%;
-    cursor: url('./assets/cursor.png'), auto;
+ 
+  
     
-  }
+    
+
 }
